--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,21 @@
     </properties>
 
     <dependencies>
+        <!--
+        -->
+	<dependency>
+		<groupId>log4j</groupId>
+		<artifactId>log4j</artifactId>
+		<version>1.2.17</version>
+	</dependency>
+                <dependency>
+                <groupId>net.sourceforge.jtds</groupId>
+                <artifactId>jtds</artifactId>
+                <version>1.3.1</version>
+                        <scope>runtime</scope>
+                </dependency>    
+        <!--
+        -->
         <dependency>
             <groupId>org.glassfish.metro</groupId>
             <artifactId>webservices-rt</artifactId>
